--- a/Jupyter Notebooks/ETL Pipeline Preparation.ipynb
+++ b/Jupyter Notebooks/ETL Pipeline Preparation.ipynb
@@ -1406,12 +1406,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "df.to_sql('InsertTableName', engine, index=False)"
+    "engine = create_engine('sqlite:///drp.db')\n",
+    "df.to_sql('messages', engine, index=False)"
    ]
   },
   {
