--- a/Jupyter Notebooks/ETL Pipeline Preparation.ipynb
+++ b/Jupyter Notebooks/ETL Pipeline Preparation.ipynb
@@ -1337,14 +1337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "170 duplicates of 26386 detected, i.e. 0.64 %\n"
+      "0 duplicates of 26216 detected, i.e. 0.0 %\n"
      ]
     }
    ],
@@ -1356,16 +1356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(26216, 41)"
+       "(26216, 40)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,12 +1374,13 @@
     "# drop duplicates\n",
     "df['dup'] = df.duplicated()\n",
     "df = df.drop(df[df.dup == True].index, axis=0)\n",
+    "df = df.drop(columns='dup', axis=1)\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1406,12 +1407,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine('sqlite:///drp.db')\n",
-    "df.to_sql('messages', engine, index=False)"
+    "df.to_sql('messages', engine, index=False, if_exists='replace')"
    ]
   },
   {
